[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "code_vibing"
readme = "README.md"
authors = [
	{name = "Samin Yead", email = "Saminyead@gmail.com"}
]
version = "0.3.0"
dependencies = [
	"toml",
    "python-vlc",
	"pytubefix",
    'importlib-metadata; python_version>="3.11"',
]
